ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: qdrant
    meta.helm.sh/release-namespace: qdrant
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: qdrant-service
            port:
              number: 6333
        path: "/"
        pathType: Prefix
